--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
             formGroupSelector: '.form-group',
             errorSelector: '.form-message',
             rules: [
-                Validator.isRequired('#age'),
-                Validator.isRequired('#email'),
-                Validator.isEmail('#email'),
-                Validator.isRequired('#gender'),
-                Validator.isRequired('input[name="marital-status"]'),
-                Validator.isRequired('#marital_status_other')
+                // Validator.isRequired('#age'),
+                // Validator.isRequired('#email'),
+                // Validator.isEmail('#email'),
+                // Validator.isRequired('#gender'),
+                // Validator.isRequired('input[name="marital-status"]'),
+                // Validator.isRequired('#marital_status_other')
             ],
             onSubmit: function (data = null) {
                 if (data != null) {
@@ -126,20 +126,32 @@
                             data[item] = data.marital_status_other;
 
                         if (!item.value)
-                            item.value = '';
+                            item.value = ' ';
                     }
                     delete data.marital_status_other;
 
-                    fetch('https://63522072dfe45bbd55cfa7ee.mockapi.io/validate', {
-                        method: 'POST',
-                        headers: {
-                        'Content-Type': 'application/json'
-                        },
-                        body: JSON.stringify(data)
-                    })
+                    const uploadData = async () => {
+                        try {
+                            const response = await fetch('https://63522072dfe45bbd55cfa7ee.mockapi.io/validate', {
+                                method: 'POST',
+                                headers: {
+                                'Content-Type': 'application/json'
+                                },
+                                body: JSON.stringify(data)
+                            })
+                            // console.log(response);
+                            if (response.ok) {
+                                document.getElementById("return").innerHTML  = '<span style="color:green">Bạn đã nhập thành công</span>';
+                                setTimeout(() => location.reload(), 3000);
+                            } else {
+                                throw new Error(`${response.status} - ${response.statusText}`);
+                            }
+                        } catch (error) {
+                            document.getElementById("return").innerHTML  = `<span style="color:red">2Lỗi khi đẩy dữ liệu lên API <br>${error}</span>`;
+                        }                       
+                    }
+                    uploadData();
 
-                    document.getElementById("return").innerHTML  = '<span style="color:green">Bạn đã nhập thành công</span>';
-                    setTimeout(() => location.reload(), 3000);
                                          
                 } else {
                     document.getElementById("return").innerHTML  = '<span style="color:red">Bạn cần nhập đầy đủ thông tin</span>';
@@ -152,6 +164,7 @@
         const crawlData = async () => {
                 const response = await fetch('https://63522072dfe45bbd55cfa7ee.mockapi.io/validate');
                 const data = response.json();
+                // console.log(response);
                 // console.log(data);
                 return data;
         }
@@ -159,16 +172,24 @@
         crawlData()
             .then((data) => {
                 var printData = '<span style="color:red"><strong>DANH SÁCH ĐÃ NHẬP</strong></span> <br>';
-                data.forEach((value) => {
-                    printData += `<span style="color:red; font-weight:600">Thông tin người thứ: ${value.id}</span> <br>`;
-                    for (var item in value) {
-                        // console.log(item + ': ' + value[item]);
-                        if (item != 'id')
-                            printData += `${item}: ${value[item]} <br>`;
-                    }
-
+                let i = 1;
+                data.map((value) => {
+                    printData += `<div style="margin-bottom:20px"><span style="color:red; font-weight:600">Thông tin người thứ: ${i++}</span> <br>
+                    <table id="myTable">
+                    <tr class="header">
+                        <th style="width:30%;">Trường</th>
+                        <th style="width:70%;">Thông tin</th>
+                    </tr>`;
+                    Object.entries(value).map((item) => {
+                        if (item[0] != 'id')
+                            printData += `<tr>
+                                        <td>${item[0]}</td>
+                                        <td>${item[1]}</td>
+                                    </tr>`;
+                    })
+                    printData += `</table></div>`;
                 })
-                console.log(data);
+                // console.log(data);
                 document.getElementById("crawlData").innerHTML  = printData;
             })
             .catch((error) => {
@@ -176,7 +197,6 @@
             });
 
 
-        // document.querySelector('.status-other input').setAttribute('id', 'marital_status_other');
 
          // Hiển thị Ô nhập marital_status_other
         const showS = document.querySelectorAll('input[name="marital-status"]');
