update map, try catch

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                                 throw new Error(`${response.status} - ${response.statusText}`);
                             }
                         } catch (error) {
-                            document.getElementById("return").innerHTML  = `<span style="color:red">2Lỗi khi đẩy dữ liệu lên API <br>${error}</span>`;
+                            document.getElementById("return").innerHTML  = `<span style="color:red">Lỗi khi đẩy dữ liệu lên API <br>${error}</span>`;
                         }                       
                     }
                     uploadData();
